Style photo area and photo card

--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
     </article>
   </section>
   <section class="photo-area">
+    <h2 class="empty-photo-area-heading photo-card-heading">NO PHOTOS YET</h2>
     <!-- <template> -->
       <article class="photo-card">
-        <h2 class="photo-card-heading"></h2>
-        <img src="" alt="" class="photo-card-img">
-        <p class="photo-card-caption"></p>
+        <h2 class="photo-card-heading">Title Goes Here</h2>
+        <img src="images/waterfall.jpg" alt="" class="photo-card-img">
+        <p class="photo-card-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <div class="photo-card-icons">
-          <div class="photo-card--delete"></div>
-          <div class="photo-card--favorite"></div>
+          <div class="card-icon delete-icon"></div>
+          <div class="card-icon favorite-icon"></div>
         </div>
       </article>
     <!-- </template> -->
