Set up photo.js with constructor #10

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="photo-area">
     <h2 class="empty-photo-area-heading photo-card-heading">NO PHOTOS YET</h2>
     <!-- <template> -->
-      <article class="photo-card">
+      <article class="photo-card" data-id>
         <h2 class="photo-card-heading" contenteditable="true">Title Goes Here</h2>
         <img src="images/waterfall.jpg" alt="" class="photo-card-img">
         <p class="photo-card-caption" contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
