Add file input and style focus states on all buttons and inputs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       </div>
     </article>
     <article class="user-btn-area">
-      <button class=" user-btn choose-file-btn">Choose File</button>
+      <input type="file" id="file-input">
+      <label for="file-input" class="user-btn file-input-btn">Choose File</label>
       <div class="view-and-add-btn-area">
         <button class="user-btn view-favorites-btn">View <span class="num-of-favorites"></span> Favorites</button>
         <button class="user-btn add-to-album-btn">Add to Album</button>
@@ -47,8 +48,8 @@
         <img src="images/waterfall.jpg" alt="" class="photo-card-img">
         <p class="photo-card-caption" contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <div class="photo-card-icons">
-          <div class="card-icon delete-icon"></div>
-          <div class="card-icon favorite-icon"></div>
+          <button class="card-icon delete-icon"></button>
+          <button class="card-icon favorite-icon"></button>
         </div>
       </article>
     <!-- </template> -->
