Add event listeners and declare functions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </section>
   <section class="photo-area">
     <h2 class="empty-photo-area-heading photo-card-heading">NO PHOTOS YET</h2>
-    <!-- <template> -->
+    <template>
       <article class="photo-card" data-id>
         <h2 class="photo-card-heading" contenteditable="true">Title Goes Here</h2>
         <img src="images/waterfall.jpg" alt="" class="photo-card-img">
@@ -52,7 +52,9 @@
           <button class="card-icon favorite-icon"></button>
         </div>
       </article>
-    <!-- </template> -->
+    </template>
   </section>
 </body>
+<script src="photo.js"></script>
+<script src="main.js"></script>
 </html>
