Move event listeners off of card and onto main photo area and remove default text from html

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <h2 class="empty-photo-area-heading photo-card-heading">NO PHOTOS YET</h2>
     <template>
       <article class="photo-card" data-id>
-        <h2 class="photo-card-heading" contenteditable="true">Title Goes Here</h2>
+        <h2 class="photo-card-heading" contenteditable="true"></h2>
         <img src="images/waterfall.jpg" alt="" class="photo-card-img">
-        <p class="photo-card-caption" contenteditable="true">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p class="photo-card-caption" contenteditable="true"></p>
         <div class="photo-card-icons">
           <button class="card-icon delete-icon"></button>
           <button class="card-icon favorite-icon"></button>
