Disable add btn and enable when inputs have value

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <label for="file-input" class="user-btn file-input-btn">Choose File</label>
       <div class="view-and-add-btn-area">
         <button class="user-btn view-favorites-btn">View <span class="num-of-favorites"></span> Favorites</button>
-        <button class="user-btn add-to-album-btn">Add to Album</button>
+        <button class="user-btn add-to-album-btn" disabled="disabled">Add to Album</button>
       </div>
     </article>
   </section>
