Clear file input and default file btn on createPhotoCard

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <template>
       <article class="photo-card" data-id>
         <h2 class="photo-card-heading" contenteditable="true"></h2>
-        <img src="images/waterfall.jpg" alt="" class="photo-card-img">
+        <img src="" alt="" class="photo-card-img">
         <p class="photo-card-caption" contenteditable="true"></p>
         <div class="photo-card-icons">
           <button class="card-icon delete-icon"></button>
