--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </article>
     <article class="user-btn-area">
-      <input type="file" id="file-input">
+      <input type="file" id="file-input" accept=".png,.jpg,.gif,.svg">
       <label for="file-input" class="user-btn file-input-btn">Choose File</label>
       <div class="view-and-add-btn-area">
         <button class="user-btn view-favorites-btn">View <span class="num-of-favorites"></span> Favorites</button>
