Make responsive with 4 media queries

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="search-btn"><i class="search-icon fas fa-search"></i></button>
     </div>
   </header>
-  <form class="user-area">
+  <section class="user-area">
     <article class="user-input-area">
       <div class="title-input-area">
         <input type="text" class="user-input" id="title-input">
@@ -40,7 +40,7 @@
         <button class="user-btn add-to-album-btn" disabled="disabled">Add to Album</button>
       </div>
     </article>
-  </form>
+  </section>
   <section class="photo-area">
     <h2 class="empty-photo-area-heading photo-card-heading">NO PHOTOS YET</h2>
     <template>
